crates/core/tests/ui/proc/plugin/svc_mut_self.stderr
error: `&mut self` is not supported in plugin service methods. Use `&self` instead.
 --> tests/ui/proc/plugin/svc_mut_self.rs:4:12
  |
4 |         fn mutate(&mut self);
  |            ^^^^^^
