crates/core/tests/ui/proc/plugin/svc_mut_self.rs
interoptopus::plugin!(BadPlugin {
    impl MyService {
        fn create() -> Self;
        fn mutate(&mut self);
    }
});

fn main() {}
